--- a/mirror-service/pom.xml
+++ b/mirror-service/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.univocity</groupId>
+            <artifactId>univocity-parsers</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
