--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <spark.version>3.0.0</spark.version>
         <junit.version>4.13.1</junit.version>
         <lombok.version>1.18.28</lombok.version>
+        <univocity.version>2.9.1</univocity.version>
     </properties>
 
     <dependencyManagement>
@@ -53,6 +54,12 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.univocity</groupId>
+                <artifactId>univocity-parsers</artifactId>
+                <version>${univocity.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     
