--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <lombok.version>1.18.28</lombok.version>
         <univocity.version>2.9.1</univocity.version>
         <springboot.version>2.7.15</springboot.version>
+        <gson.version>2.8.5</gson.version>
     </properties>
 
     <dependencyManagement>
@@ -79,6 +80,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${springboot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
