--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,10 @@
 *.csv
 *.json
 *.iml
-
+*Test.*
+target
+out
+dev.txt
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
