--- a/mirror-service/pom.xml
+++ b/mirror-service/pom.xml
@@ -15,6 +15,14 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.archer.mirror</groupId>-->
 <!--            <artifactId>mirror-core</artifactId>-->
