--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,22 @@
         <univocity.version>2.9.1</univocity.version>
         <springboot.version>2.7.15</springboot.version>
         <gson.version>2.8.5</gson.version>
+        <poi.version>5.2.3</poi.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.spark</groupId>
                 <artifactId>spark-sql_2.12</artifactId>
